// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ExpenseSummary render properly 1`] = `
<div>
  <h2>
    Viewving 
     expenses totalling:  
    $0.00
  </h2>
</div>
`;

exports[`should ExpenseSummary render properly with expenses 1`] = `
<div>
  <h2>
    Viewving 
    3
     expenses totalling:  
    $12,013.00
  </h2>
</div>
`;
